# currency_converter

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  python.yml
currency_converter/: pyproject.toml
currency_converter/src/currency_app/: main.py
src/currency_app/: cl-currencies.json  main.py  secondary.py
tests/: test_api.py  test_convert.py
